refactor(UserData): populate rawJson and enforce additionalMetrics immutability (#15, #16)
- Populate rawJson with serialized DTO in all 4 API clients via ObjectMapper injection
- Enforce additionalMetrics immutability with Collections.unmodifiableMap in compact constructor
- Add Javadoc documenting immutability contract and rawJson purpose
- Add tests for immutability and rawJson assertions

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>